Fix popover bug for hardware and documentation nav items
Hardware and documentation nav popovers are and would appear offscreen when opening above the nav item. Transform has been addded to address this behavior

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -557,7 +557,8 @@ html {
       top: 92%;
       left: -25%; }
     .popover.open-top {
-      top: -122%;
+      transform: translate(0, -100%); 
+      top: -5%;
       left: -25%; }
     .popover.open-bottom .popover-item:first-child .popover-link:after, 
     .popover.open-bottom .popover-item:first-child .popover-link:before,
